# auca_cs_archive

./: .gitignore  README.md
Computer_Architecture_and_Organization-COM410.1/01_practice/: tasks.md
Computer_Architecture_and_Organization-COM410.1/02_practice/: init.sh
Computer_Architecture_and_Organization-COM410.1/labs/: init_task.sh
Computer_Architecture_and_Organization-COM410.1/notes/: 00_topic_summary.md  01-Lecture-01-13-20.md  02-Lecture-01-20-20.md  03-Lecture-01-27-20.md  04-Lab-01-29-20.md  05-Lecture-02-03-20.md  06-Lecture-02-10-20.md  07-Lab-02-12-20.md  08-Lecture-02-17-20.md  09-Lab-02-19-20.md  10-Lab-03-11-20.md  (+5 more)
Computer_Architecture_and_Organization-COM410.1/project/: CMakeLists.txt
Computer_Architecture_and_Organization-COM410.1/project/01_section/: 01_int.s  01_x_87.s
Computer_Architecture_and_Organization-COM410.1/project/02_section/: 02_simd.cpp  02_x_87.cpp
Computer_Architecture_and_Organization-COM410.1/project/templates/: template_01.s  template_02.cpp
Computer_Graphics-COM391/labs/lab_01_02/: CMakeLists.txt  lab_01_02.cpp
Computer_Graphics-COM391/labs/lab_03_02/: CMakeLists.txt  lab_03_02.cpp
Computer_Graphics-COM391/labs/lab_03_02/include/: es2_constant_material.hpp
Computer_Graphics-COM391/labs/lab_04_01/: CMakeLists.txt  lab_04_01.cpp
Computer_Graphics-COM391/labs/lab_04_01/include/geometries/: geometry.hpp
Computer_Graphics-COM391/labs/lab_04_01/include/materials/: constant_material.hpp  es2_constant_material.hpp
Computer_Graphics-COM391/labs/lab_04_01/include/scene/: scene.hpp
Computer_Graphics-COM391/labs/lab_04_01/include/utilities/: utilities.hpp
Computer_Graphics-COM391/labs/lab_05_02-clock/: CMakeLists.txt  lab_05_02.cpp
Computer_Graphics-COM391/labs/lab_05_02-clock/include/geometries/: es2_geometry.hpp  geometry.hpp  geometry_generators.hpp  vertex.hpp
Computer_Graphics-COM391/labs/lab_05_02-clock/include/materials/: constant_material.hpp  es2_constant_material.hpp
Computer_Graphics-COM391/labs/lab_05_02-clock/include/objects/: camera.hpp  mesh.hpp
Computer_Graphics-COM391/labs/lab_05_02-clock/include/renderer/: es2_renderer.hpp  es2_shader.hpp  shader.hpp
Computer_Graphics-COM391/labs/lab_05_02-clock/include/scene/: scene.hpp
Computer_Graphics-COM391/labs/lab_05_02-clock/include/textures/: es2_texture.hpp
Computer_Graphics-COM391/labs/lab_05_02-clock/include/window/: sdl_window.hpp  window.hpp
Computer_Graphics-COM391/labs/lab_07_01/: CMakeLists.txt
Computer_Graphics-COM391/labs/lab_07_01/data/shaders/: es2_constant_shader.frag  es2_phong_shader.frag
Computer_Graphics-COM391/labs/lab_07_01/include/geometries/: es2_geometry.hpp  geometry.hpp  geometry_generators.hpp
Computer_Graphics-COM391/labs/lab_07_01/include/lights/: directional_light.hpp  spot_light.hpp
Computer_Graphics-COM391/labs/lab_07_01/include/materials/: constant_material.hpp  es2_constant_material.hpp  es2_phong_material.hpp  material.hpp  phong_material.hpp
Computer_Graphics-COM391/labs/lab_07_01/include/objects/: camera.hpp  object.hpp
Computer_Graphics-COM391/labs/lab_07_01/include/renderer/: es2_renderer.hpp  es2_shader.hpp  shader.hpp
Computer_Graphics-COM391/labs/lab_07_01/include/scene/: scene.hpp
Computer_Graphics-COM391/labs/lab_07_01/include/textures/: es2_texture.hpp  texture.hpp
Computer_Graphics-COM391/labs/lab_07_01/include/utilities/: utilities.hpp
Computer_Graphics-COM391/labs/lab_07_01/include/window/: sdl_window.hpp
Computer_Graphics-COM391/labs/lab_07_01/tests/: 01_window_test.cpp  02_triangle_test.cpp  05_02_light_test.cpp  06_01_texture_test.cpp
Computer_Graphics-COM391/project/engine/: CMakeLists.txt
Computer_Graphics-COM391/project/engine/data/shaders/: es2_constant_shader.vert  es2_phong_shader.frag  es2_phong_shader.vert
Computer_Graphics-COM391/project/engine/include/: aur.hpp  characters.hpp  constants.hpp  game_modules.hpp  helpers.hpp
Computer_Graphics-COM391/project/engine/include/constants/: colors.hpp  numbers.hpp  paths.hpp
Computer_Graphics-COM391/project/engine/include/game_characters/: cpos.hpp  enemy.hpp  entity.hpp  head.hpp  player.hpp
Computer_Graphics-COM391/project/engine/include/game_modules/: 01_window_test.hpp  02_triangle_test.hpp  03_geometry_test.hpp  game_state.hpp
Computer_Graphics-COM391/project/engine/include/geometries/: es2_geometry.hpp  geometry.hpp  geometry_generators.hpp  tangent_space_math.hpp  vertex.hpp
Computer_Graphics-COM391/project/engine/include/helper_functions/: fps_counter.hpp  helper_structs.hpp  imgui_helper.hpp  light_generators.hpp  material_helper.hpp  mesh_generators.hpp  mesh_group_generators.hpp  movement_control.hpp  spawn_enemies.hpp  texture_generators.hpp
Computer_Graphics-COM391/project/engine/include/imgui/: imgui.cpp  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp  imstb_truetype.h
Computer_Graphics-COM391/project/engine/include/lights/: ambient_light.hpp  point_light.hpp  spot_light.hpp
Computer_Graphics-COM391/project/engine/include/materials/: constant_material.hpp  es2_constant_material.hpp  es2_phong_material.hpp  material.hpp  phong_material.hpp
Computer_Graphics-COM391/project/engine/include/math/: plane.hpp  ray.hpp  sphere.hpp
Computer_Graphics-COM391/project/engine/include/objects/: camera.hpp  mesh.hpp  object.hpp
Computer_Graphics-COM391/project/engine/include/renderer/: es2_renderer.hpp  es2_shader.hpp  renderer.hpp
Computer_Graphics-COM391/project/engine/include/scene/: scene.hpp
Computer_Graphics-COM391/project/engine/include/textures/: es2_texture.hpp  texture.hpp
Computer_Graphics-COM391/project/engine/include/utilities/: utilities.hpp
Computer_Graphics-COM391/project/engine/include/window/: sdl_window.hpp  window.hpp
Computer_Graphics-COM391/project/engine/tests/: 00_main.cpp  01_window_test.cpp  02_triangle_test.cpp  03_geometry_test.cpp  04_scene_graph_test.cpp  05_01_light_test.cpp  05_02_light_test.cpp  06_texture_test.cpp  07_textured_plane_test.cpp  08_material_properties_test.cpp  09_01_normal_mapping_test.cpp  09_02_normal_mapping_test.cpp  10_game_test.cpp
(+899 files in other folders)
